# Services/Notifikasi/app/OpenApi.php
@@ -10,8 +10,22 @@ use OpenApi\Attributes as OA;
     description: "API untuk Service Notifikasi Delay"
 )]
 #[OA\Server(
-    url: "http://127.0.0.1:8000",
-    description: "Local Server"
+    url: "http://localhost",
+    description: "Local API Gateway Server"
+)]
+#[OA\SecurityScheme(
+    securityScheme: "ApiKeyAuth",
+    type: "apiKey",
+    in: "header",
+    name: "X-IAE-KEY",
+    description: "Masukkan API Key (NIM: 102022400154)"
+)]
+#[OA\SecurityScheme(
+    securityScheme: "bearerAuth",
+    type: "http",
+    scheme: "bearer",
+    bearerFormat: "JWT",
+    description: "Masukkan Token JWT SSO untuk mengakses endpoint"
 )]
 class OpenApi
 {
